--- a/scss/components/table.scss
+++ b/scss/components/table.scss
@@ -16,6 +16,7 @@
 
   &--mini {
     padding: 8px 24px 0 20px;
+    box-shadow: 0 4px 44px #E8EEF4;
   }
 
   &__row {
@@ -39,7 +40,7 @@
 
     &--head {
       padding: 11px 0;
-      border-bottom: 1px solid #EAEAEA;
+      border-bottom: 1px solid #CCCCCC;
     }
   }
 
