--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,8 @@
 @import 'sections/bottom-tables.scss';
 @import 'sections/middle.scss';
 @import 'components/table.scss';
+@import 'components/slider.scss';
+@import 'components/notifications.scss';
 
 
 @font-face {
