--- a/scss/sections/middle.scss
+++ b/scss/sections/middle.scss
@@ -1,9 +1,11 @@
 .middle {
+  position: relative;
+  top: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 10px;
-  padding: 25px 0;
+  padding: 25px 0 35px;
   background: #FFFFFF;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
@@ -25,6 +27,7 @@
   &__content {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 27px;
   }
 
