--- a/scss/components/table.scss
+++ b/scss/components/table.scss
@@ -9,9 +9,20 @@
   }
 
   &--second {
+    position: relative;
     width: 100%;
     padding: 11px 24px;
-    border-bottom: 3px solid #E55F39;
+    overflow: hidden;
+
+    &::after {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background: #E55F39;
+      content: '';
+    }
   }
 
   &--mini {
