--- a/scss/components/slider.scss
+++ b/scss/components/slider.scss
@@ -1,5 +1,6 @@
 .slider {
-  width: 100%;
+  box-sizing: border-box;
+  width: 1270px;
   padding: 41px 44px;
   background: #FAFAFA;
   border-radius: 1000px;
