--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,6 +37,7 @@ body {
 .container {
   box-sizing: border-box;
   width: 100%;
+  min-width: 1880px;
   max-width: 1920px;
   margin-right: auto;
   margin-left: auto;
