--- a/scss/components/table.scss
+++ b/scss/components/table.scss
@@ -156,12 +156,14 @@
   &__awards {
     position: relative;
     display: flex;
+    flex-direction: row-reverse;
     justify-content: flex-end;
     align-items: center;
     width: 100%;
   }
 
   &__award {
+    position: absolute;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -170,6 +172,57 @@
     background: linear-gradient(0deg, #E6EBF6, #E6EBF6);
     border: 1px solid #FFFFFF;
     border-radius: 46px;
+
+    &:nth-child(1) {
+      right: 0;
+      z-index: 10;
+      order: 10;
+    }
+
+    &:nth-child(2) {
+      right: 28px;
+      z-index: 9;
+    }
+
+    &:nth-child(3) {
+      right: calc(28px * 2);
+      z-index: 8;
+    }
+
+    &:nth-child(4) {
+      right: calc(28px * 3);
+      z-index: 7;
+    }
+
+    &:nth-child(5) {
+      right: calc(28px * 4);
+      z-index: 6;
+    }
+
+    &:nth-child(6) {
+      right: calc(28px * 5);
+      z-index: 5;
+    }
+
+    &:nth-child(7) {
+      right: calc(28px * 6);
+      z-index: 4;
+    }
+
+    &:nth-child(8) {
+      right: calc(28px * 7);
+      z-index: 3;
+    }
+
+    &:nth-child(9) {
+      right: calc(28px * 8);
+      z-index: 2;
+    }
+
+    &:nth-child(10) {
+      right: calc(28px * 9);
+      z-index: 1;
+    }
 
     img {
       max-width: 34px;
