--- a/scss/sections/middle.scss
+++ b/scss/sections/middle.scss
@@ -38,8 +38,6 @@
   }
 
   &__table {
-    box-sizing: border-box;
-    width: 520px;
     padding: 22px 20px;
     background: #FFFFFF;
     border-radius: 16px;
@@ -47,7 +45,8 @@
 
     tr {
       display: flex;
-      gap: 40px;
+      align-items: center;
+      gap: 36px;
     }
   }
 
@@ -55,16 +54,33 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 2;
+    gap: 2px;
+    box-sizing: border-box;
     color: #1C1C1C;
     font-size: 16px;
     line-height: 18px;
+
+    &:nth-child(1n) {
+      width: 120px;
+    }
+
+    &:nth-child(2n) {
+      width: 109px;
+    }
+
+    &:nth-child(3n) {
+      width: 69px;
+    }
+
+    &:nth-child(4n) {
+      width: 68px;
+    }
 
     &:not(:last-child) {
       &::after {
         position: absolute;
         top: 50%;
-        right: -20px;
+        right: -18px;
         width: 1px;
         height: 46px;
         background: #EAEAEA;
