--- a/scss/components/notifications.scss
+++ b/scss/components/notifications.scss
@@ -3,7 +3,7 @@
   top: 22px;
   right: 17px;
   z-index: 11;
-  display: none;
+  display: flex;
   flex-direction: column;
   gap: 10px;
   width: 437px;
